service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-service
spec:
  type: ClusterIP
  selector:
    app: acme
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
