ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: https://greeting-api.acme.co.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acme-service
            port:
              number: 80
